Made a draggable table list

--- a/SimTECH/SimTECH/Components/ReorderList.razor
+++ b/SimTECH/SimTECH/Components/ReorderList.razor
@@ -1,4 +1,6 @@
-﻿<div>
+﻿@* NOTE: goal is to use this in a generic way, not sure yet though how to pass any list and handle it generically *@
+
+<div>
     <ul ondragover="event.preventDefault();" ondragstart="event.dataTransfer.setData('', event.target.id);">
 	    @foreach (var item in DragModels.OrderBy(x => x.Order))
 	    {
