woah, good idea! add entrants and then drop them under the correct owner

--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -92,6 +92,11 @@
         Season = await SeasonService.GetSeasonById(SeasonId);
     }
 
+    /*
+     * Idea: add entrants wizard, select the engines, teams and drivers to use; store selections in a list.
+     * then make dropzones for every engine -> drop teams underneath them. Same page after for teams with drivers.
+     */
+
     async Task UpdateSeason()
     {
         var parameters = new DialogParameters { ["Season"] = Season, ["Copied"] = false };
