--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -17,7 +17,7 @@
                     <MudTextField T="string" @bind-Value="model.Biography" Label="Biography" />
                 </MudItem>
                 <MudItem xs="4">
-                    Traits bla bla
+                    <MudText>Traits bla bla</MudText>
                     <MudChipSet @bind-SelectedValues="selectedTraits" MultiSelection="true" Filter="true">
                         @foreach (var trait in Traits)
                         {
