--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -15,8 +15,7 @@
     <MudText Typo="Typo.h3">Races</MudText>
     <MudText>[Temp] The seasonId is @Season.Id</MudText>
 
-    @* None should actually be ignored in the future *@
-    @if (Season.State == State.Concept || Season.State == State.None)
+    @if (Season.State == State.Concept)
     {
         <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large">
             <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRace">Add race</MudButton>
