--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -21,6 +21,9 @@
             <MudTabPanel Text="Calendar">
                 <Calendar />
             </MudTabPanel>
+            <MudTabPanel Text="Adding ALL entrants :))">
+                <AddEntrants />
+            </MudTabPanel>
             <MudTabPanel Text="Standings">
                 <MudText>Not implemented yet</MudText>
             </MudTabPanel>
