--- a/SimTECH/SimTECH/Components/MudCountrySelect.razor
+++ b/SimTECH/SimTECH/Components/MudCountrySelect.razor
@@ -25,7 +25,7 @@
             {
                 Code = e,
                 Name = e.GetDescription(),
-                Flag = e.ToString().CountryCodeToEmoji(),
+                Flag = e.CountryCodeToEmoji(),
             })
         .ToList();
 
