--- a/SimTECH/SimTECH/Components/RangeInput.razor
+++ b/SimTECH/SimTECH/Components/RangeInput.razor
@@ -8,23 +8,29 @@
             <MudTh>Maximum</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Type">@context.Type</MudTd>
-            <MudTd DataLabel="Comparer">@context.Comparer</MudTd>
-            <MudTd DataLabel="Minimum">@context.Minimum</MudTd>
-            <MudTd DataLabel="Maximum">@context.Maximum</MudTd>
-        </RowTemplate>
-        <RowEditingTemplate>
             <MudTd DataLabel="Type">Type</MudTd>
             <MudTd DataLabel="Comparer">
-                <MudNumericField @bind-Value="@context.Comparer" Required />
+                <MudNumericField @bind-Value="@context.Comparer" />
             </MudTd>
             <MudTd DataLabel="Minimum">
-                <MudNumericField @bind-Value="@context.Minimum" Required />
+                <MudNumericField @bind-Value="@context.Minimum" />
             </MudTd>
             <MudTd DataLabel="Maximum">
-                <MudNumericField @bind-Value="@context.Maximum" Required />
+                <MudNumericField @bind-Value="@context.Maximum" />
             </MudTd>
-        </RowEditingTemplate>
+        </RowTemplate>
+@*        <RowEditingTemplate>
+            <MudTd DataLabel="Type">Type</MudTd>
+            <MudTd DataLabel="Comparer">
+                <MudNumericField @bind-Value="@context.Comparer" />
+            </MudTd>
+            <MudTd DataLabel="Minimum">
+                <MudNumericField @bind-Value="@context.Minimum" />
+            </MudTd>
+            <MudTd DataLabel="Maximum">
+                <MudNumericField @bind-Value="@context.Maximum" />
+            </MudTd>
+        </RowEditingTemplate>*@
         <FooterContent>
             <MudTFootRow>
                 <MudTd>
@@ -36,14 +42,11 @@
 </MudContainer>
 
 @code {
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
+    [Parameter] public RenderFragment? ChildContent { get; set; }
 
-    [Parameter]
-    public IList<EditRangeModel> Items { get; set; } = new List<EditRangeModel>();
+    [Parameter] public IList<EditRangeModel> Items { get; set; } = new List<EditRangeModel>();
 
-    [Parameter]
-    public RangeType RangeType { get; set; }
+    [Parameter] public RangeType RangeType { get; set; }
     
     private void AppendRangeRow()
     {
