--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -42,6 +42,10 @@
 
 @code {
     private bool _loading = true;
+    private readonly DialogOptions dialogOptions = new()
+    {
+        MaxWidth = MaxWidth.ExtraLarge,
+    };
     private IEnumerable<League> LeagueData = new List<League>();
 
     protected override async Task OnInitializedAsync()
@@ -55,7 +59,7 @@
     {
         var parameters = new DialogParameters { ["League"] = (item) };
 
-        var dialog = await DialogService.ShowAsync<LeagueEditor>("Modify League", parameters);
+        var dialog = await DialogService.ShowAsync<LeagueEditor>("Modify League", parameters, dialogOptions);
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is League updatedLeague)
